--- a/rag/templates/backend/secrets.yaml
+++ b/rag/templates/backend/secrets.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  auth: {{ .Values.backend.secrets.basicAuth }}
+  auth: {{ .Values.backend.secrets.basicAuth | b64enc }}
   {{- range $key, $value := .Values.backend.secrets.auth }}
   {{ $key }}: {{ $value | b64enc }}
   {{- end }}
