--- a/rag/values.yaml
+++ b/rag/values.yaml
@@ -268,6 +268,10 @@ adminBackend:
       CONFLUENCE_URL: ""
       CONFLUENCE_SPACE_KEY: ""
       CONFLUENCE_DOCUMENT_NAME: ""
+      CONFLUENCE_VERIFY_SSL: ""
+      CONFLUENCE_INCLUDE_ATTACHMENTS: ""
+      CONFLUENCE_KEEP_MARKDOWN_FORMAT: ""
+      CONFLUENCE_KEEP_NEWLINES: ""
     keyValueStore:
       USECASE_KEYVALUE_PORT: 6379
       USECASE_KEYVALUE_HOST: "rag-keydb"
