--- a/rag/values.yaml
+++ b/rag/values.yaml
@@ -11,6 +11,19 @@ features:
     enabled: true
 
 backend:
+
+  mcp:
+    enabled: true
+    toolDescription: ""
+    name: "mcp"
+    toolName: ""
+    port: "8081"
+    image:
+      repository: ghcr.io/stackitcloud/rag-template
+      name: rag-mcp
+      pullPolicy: Always
+      tag: "v1.0.0"
+
   name: backend
   replicaCount: 1
 
