chore: remove unused variables from values file (#14)

--- a/rag/values.yaml
+++ b/rag/values.yaml
@@ -1,6 +1,8 @@
 features:
   ollama:
     enabled: false
+  minio:
+    enabled: false
   langfuse:
     enabled: true
   qdrant:
@@ -161,11 +163,6 @@ frontend:
   service:
     type: ClusterIP
     port: 8080
-
-  config:
-    envs:
-      VITE_API_URL: http://rag.localhost/api
-      VITE_CHAT_URL: http://rag.localhost
 
   ingress:
     enabled: true
