feat: update DNS name variable and enhance object storage bucket naming with timestamp

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 **/cr-secret.yaml
 **/customer-values.yaml
 
+**/*.lock.*
+
+auth
+
+.DS_Store
+
+*-values.yaml
+
 */terraform.tfstate
 */Chart.lock
 *.tgz
