--- a/rag/values.yaml
+++ b/rag/values.yaml
@@ -265,7 +265,7 @@ adminBackend:
       USECASE_KEYVALUE_PORT: 6379
       USECASE_KEYVALUE_HOST: "rag-keydb"
     sourceUploader:
-      SOURCE_UPLOADER_TIMEOUT: "3600.0"
+      SOURCE_UPLOADER_TIMEOUT: 3600
 
 extractor:
   replicaCount: 1
