--- a/rag/templates/admin-backend/configmap.yaml
+++ b/rag/templates/admin-backend/configmap.yaml
@@ -33,3 +33,12 @@ data:
   {{- range $key, $value := .Values.adminBackend.envs.keyValueStore }}
   {{ $key }}: {{ $value | quote }}
   {{- end }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ template "configmap.sourceUploaderName" . }}
+data:
+  {{- range $key, $value := .Values.adminBackend.envs.sourceUploader }}
+  {{ $key }}: {{ $value | quote }}
+  {{- end }}
