--- a/rag/values.yaml
+++ b/rag/values.yaml
@@ -264,6 +264,8 @@ adminBackend:
     keyValueStore:
       USECASE_KEYVALUE_PORT: 6379
       USECASE_KEYVALUE_HOST: "rag-keydb"
+    sourceUploader:
+      SOURCE_UPLOADER_TIMEOUT: 3600
 
 extractor:
   replicaCount: 1
