--- a/rag/values.yaml
+++ b/rag/values.yaml
@@ -14,10 +14,10 @@ backend:
 
   mcp:
     enabled: true
-    toolDescription: ""
     name: "mcp"
-    toolName: ""
-    port: "8081"
+    port: "8000"
+    toolName: "chat_with_rag"
+    toolDescription: "Chat with the RAG backend system to get answers based on indexed documents"
     image:
       repository: ghcr.io/stackitcloud/rag-template
       name: rag-mcp
