--- a/rag/templates/backend/service.yaml
+++ b/rag/templates/backend/service.yaml
@@ -8,10 +8,10 @@ spec:
   - port: {{ .Values.backend.service.port }}
     name: backend
     targetPort: {{ .Values.backend.service.port }}
-  {{- if .Values.backend.mcp.enabled }}        
+  {{- if .Values.features.mcp.enabled }}
   - port: {{ .Values.backend.mcp.port }}
     targetPort: {{ .Values.backend.mcp.port }}
     name: mcp
-  {{- end }}    
+  {{- end }}
   selector:
     app: {{ .Values.backend.name }}
