feat: provide the chat of the rag by MCP (#21)
* add infrastructure for mcp

* feat: update mcp configuration and improve ingress rules

* feat: add MCP server configuration and update related templates

* refactor: rag backend main and mcp ingress

---------

Co-authored-by: Melvin Klein <melvin.klein@stackit.cloud>

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ auth
 .DS_Store
 
 *-values.yaml
-
+**/mcp.json
 */terraform.tfstate
 */Chart.lock
 *.tgz
@@ -156,3 +156,4 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+auth
